Add UTILITIES to generate element orbitals.
convcube for generating gaussian cube files for element orbitals.

SplitGaussianCube that splits orbitals into positive and negative
contributions for plotting purpose.

gaussiancubehead to generate a headfile for Gaussian cube format.
Substituted by convcube now.

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -60,6 +60,8 @@ testpge: testpge.o
 testge: testge.o
 	$(LOADER) $(LOADOPTS) -o $@ $<
 
+convcube: convcube.o
+	$(LOADER) $(LOADOPTS) -o $@ $<
 
 clean:
 	(cd LOBPCG; make clean; cd ../; $(RM) $(RMFLAGS) *.o *.d *.a tstpw tstdg mdpw mddg \
