Add subroutines for dumping DG matrix
Dump the DG matrix in the standard form (orthogonal basis functions)

Use ifdef for temporary new functionalities, such as dumping DG matrix
or computing the condition number of the mass matrix.

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -65,6 +65,12 @@ testge: testge.o
 convcube: convcube.o
 	$(LOADER) $(LOADOPTS) -o $@ $<
 
+genmat: genmat.o
+	$(LOADER) $(LOADOPTS) -o $@ $<
+
+readmat: readmat.o
+	$(LOADER) $(LOADOPTS) -o $@ $<
+
 clean:
 	(cd LOBPCG; make clean; cd ../; $(RM) $(RMFLAGS) *.o *.d *.a tstpw tstdg mdpw mddg \
 	  testeig1 testeig ttmatvec1 testeig2 testpge testge)
