Commit all changes before migrating.
Begin the following migration:

1) Elemental based linear algebra platform.
2) CMake based compiling system.
3) Parallel platform and get ready for adaptivity.

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -62,6 +62,9 @@ testpge: testpge.o
 testge: testge.o
 	$(LOADER) $(LOADOPTS) -o $@ $<
 
+ConvALBCube: ConvALBCube.o
+	$(LOADER) $(LOADOPTS) -o $@ $<
+
 convcube: convcube.o
 	$(LOADER) $(LOADOPTS) -o $@ $<
 
