Got eigensolver to work in parallel (ex7)
Without preconditioning yet.  Next step is to get the eigenfunctions out to spinor, and add preconditioner (for laplacian problem)

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -4,7 +4,7 @@
 include ../make.inc.${HOSTID}
 
 
-SRCS = spinor.cpp domain.cpp esdf.cpp global.cpp
+SRCS = spinor.cpp fourier.cpp domain.cpp esdf.cpp global.cpp
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 
