Add modified blopex and test (ex8)

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -8,7 +8,7 @@ SRCS = spinor.cpp fourier.cpp domain.cpp esdf.cpp global.cpp
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 
-libdgdft: libdgdft.a
+all: libdgdft.a
 
 -include ${DEPS}
 
