Add blasé and lapack support.
Add ex13.cpp to test the least square solver using a combination of pets and lapack.

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -5,7 +5,7 @@ include ../make.inc.${HOSTID}
 
 
 SRCS = periodtable.cpp eigensolver.cpp spinor.cpp fourier.cpp \
-			 domain.cpp utility.cpp esdf.cpp global.cpp
+			 domain.cpp utility.cpp esdf.cpp lapack.cpp blas.cpp global.cpp
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 
