--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,11 +5,20 @@ include ../make.inc.${HOSTID}
 
 
 SRCS = ex1.cpp ex2.cpp ex3.cpp ex4.cpp ex5.cpp ex6.cpp ex7.cpp ex8.cpp\
-			 ex9.cpp ex10.cpp ex11.cpp ex12.cpp ex13.cpp
+			 ex9.cpp ex10.cpp ex11.cpp ex12.cpp ex13.cpp ex14.cpp ex15.cpp\
+			 ex16.cpp
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 EXES = ${SRCS:.cpp=}	
 
+ex16: ex16.o ${DGDFT_LIB} 
+	($(LOADER) $(LOADOPTS) -o $@ ex16.o)
+
+ex15: ex15.o ${DGDFT_LIB} 
+	($(LOADER) $(LOADOPTS) -o $@ ex15.o)
+
+ex14: ex14.o ${DGDFT_LIB} 
+	($(LOADER) $(LOADOPTS) -o $@ ex14.o)
 
 ex13: ex13.o ${DGDFT_LIB} 
 	($(LOADER) $(LOADOPTS) -o $@ ex13.o)
