--- a/src/Makefile
+++ b/src/Makefile
@@ -3,8 +3,8 @@
 
 include ../make.inc.${HOSTID}
 
-
-SRCS = periodtable.cpp eigensolver.cpp spinor.cpp fourier.cpp \
+SRCS = spinor.cpp fourier.cpp domain.cpp utility.cpp esdf.cpp lapack.cpp blas.cpp global.cpp
+#SRCS = periodtable.cpp eigensolver.cpp spinor.cpp fourier.cpp \
 			 domain.cpp utility.cpp esdf.cpp lapack.cpp blas.cpp global.cpp
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
