--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,7 @@
 
 include ../make.inc.${HOSTID}
 
-SRCS = ex17.cpp
+SRCS = ex18.cpp
 
 #SRCS = ex1.cpp ex2.cpp ex3.cpp ex4.cpp ex5.cpp ex6.cpp ex7.cpp ex8.cpp\
 			 ex9.cpp ex10.cpp ex11.cpp ex12.cpp ex13.cpp ex14.cpp ex15.cpp\
@@ -12,6 +12,9 @@ SRCS = ex17.cpp
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 EXES = ${SRCS:.cpp=}	
+
+ex18: ex18.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ ex18.o $(LOADOPTS) )
 
 ex17: ex17.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ ex17.o $(LOADOPTS) )
