--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,9 @@
 
 include ../make.inc.${HOSTID}
 
-SRCS = scf.cpp eigensolver.cpp lobpcg++.cpp hamiltonian_dg.cpp hamiltonian.cpp periodtable.cpp spinor.cpp fourier.cpp utility.cpp esdf.cpp mpi_interf.cpp lapack.cpp blas.cpp global.cpp 
+SRCS = scf.cpp eigensolver.cpp lobpcg++.cpp hamiltonian_dg.cpp hamiltonian.cpp \
+			 periodtable.cpp spinor.cpp fourier.cpp utility.cpp esdf.cpp \
+			 mpi_interf.cpp scalapack.cpp lapack.cpp blas.cpp global.cpp 
 #SRCS = periodtable.cpp eigensolver.cpp spinor.cpp fourier.cpp \
 			 domain.cpp utility.cpp esdf.cpp lapack.cpp blas.cpp global.cpp
 OBJS = ${SRCS:.cpp=.o}
