Update makefile and separate hamiltonian_dg file

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,8 +4,8 @@
 include ../make.inc
 
 SRCS = scf_dg.cpp scf.cpp eigensolver.cpp lobpcg++.cpp \
-			 hamiltonian_dg.cpp hamiltonian.cpp periodtable.cpp \
-			 spinor.cpp fourier.cpp utility.cpp esdf.cpp \
+			 hamiltonian_dg_matrix.cpp hamiltonian_dg.cpp hamiltonian.cpp \
+			 periodtable.cpp spinor.cpp fourier.cpp utility.cpp esdf.cpp \
 			 mpi_interf.cpp scalapack.cpp lapack.cpp blas.cpp global.cpp 
 #SRCS = periodtable.cpp eigensolver.cpp spinor.cpp fourier.cpp \
 			 domain.cpp utility.cpp esdf.cpp lapack.cpp blas.cpp global.cpp
