Add routine to convert DistSparseMatrix to ScaLAPACK matrix.
in hamiltonian_dg.hpp

DistSparseMatToScaMat

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@
 
 include ../make.inc
 
-SRCS = dgdft.cpp
+SRCS = dgdft.cpp diagonalize.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
@@ -11,6 +11,10 @@ EXES = ${SRCS:.cpp=}
 
 dgdft: dgdft.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ dgdft.o $(LOADOPTS) )
+
+diagonalize: diagonalize.o ${diagonalize_LIB} 
+	($(LOADER) -o $@ diagonalize.o $(LOADOPTS) )
+
 
 -include ${DEPS}
 
