--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,11 +3,14 @@
 
 include ../make.inc
 
-SRCS = dgdft.cpp diagonalize.cpp
+SRCS = pwdft.cpp dgdft.cpp diagonalize.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 EXES = ${SRCS:.cpp=}	
+
+pwdft: pwdft.o ${pwdft_LIB} 
+	($(LOADER) -o $@ pwdft.o $(LOADOPTS) )
 
 dgdft: dgdft.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ dgdft.o $(LOADOPTS) )
