Add a working but not fully robust version of locally implemented LOBPCG.
The test for Laplacian operator is passed using test routine ex32.cpp.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -13,6 +13,9 @@ OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 EXES = ${SRCS:.cpp=}	
 
+ex32: ex32.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ ex32.o $(LOADOPTS) )
+
 ex31: ex31.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ ex31.o $(LOADOPTS) )
 
