--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,14 +3,14 @@
 
 include ../make.inc
 
-SRCS = NVTdgdft_Update_Conv.cpp dgdft.cpp diagonalize.cpp
+SRCS = mdpwdft_grid.cpp dgdft.cpp diagonalize.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 EXES = ${SRCS:.cpp=}	
 
-NVTdgdft_Update_Conv: NVTdgdft_Update_Conv.o ${NVTdgdft_Update_Conv_LIB} 
-	($(LOADER) -o $@ NVTdgdft_Update_Conv.o $(LOADOPTS) )
+mdpwdft_grid: mdpwdft_grid.o ${mdpwdft_grid_LIB} 
+	($(LOADER) -o $@ mdpwdft_grid.o $(LOADOPTS) )
 
 dgdft: dgdft.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ dgdft.o $(LOADOPTS) )
