--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 
 include ../make.inc
 
-SRCS = scf_dg.cpp scf.cpp eigensolver.cpp lobpcg++.cpp plobpcg++.cpp \
+SRCS = scf_dg.cpp scf.cpp eigensolver.cpp lobpcg++.cpp  \
 			 hamiltonian_dg_matrix.cpp hamiltonian_dg.cpp hamiltonian.cpp \
 			 periodtable.cpp spinor.cpp fourier.cpp utility.cpp esdf.cpp \
 			 mpi_interf.cpp scalapack.cpp lapack.cpp blas.cpp global.cpp 
