--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,14 +3,20 @@
 
 include ../make.inc
 
-SRCS = pwdft.cpp dgdft.cpp diagonalize.cpp
+SRCS = dgdft_bb.cpp pwdft_bb.cpp pwdft.cpp dgdft.cpp diagonalize.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 EXES = ${SRCS:.cpp=}	
 
+pwdft_bb: pwdft_bb.o ${DGdft_bb_LIB} 
+	($(LOADER) -o $@ pwdft_bb.o $(LOADOPTS) )
+
 pwdft: pwdft.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ pwdft.o $(LOADOPTS) )
+
+dgdft_bb: dgdft_bb.o ${dgdft_bb_LIB} 
+	($(LOADER) -o $@ dgdft_bb.o $(LOADOPTS) )
 
 dgdft: dgdft.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ dgdft.o $(LOADOPTS) )
