add various test routines for FFTW

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,9 @@
 
 include ../make.inc
 
-SRCS = ex39.cpp ex38.cpp ex37.cpp ex36.cpp ex35.cpp ex34.cpp ex31.cpp ex30.cpp ex29.cpp ex28.cpp ex27.cpp ex26.cpp ex25.cpp ex24.cpp ex23.cpp ex21.cpp ex22.cpp
+SRCS = ex44.cpp ex43.cpp ex42.cpp ex41.cpp ex40.cpp ex39.cpp ex38.cpp ex37.cpp ex36.cpp \
+	   ex35.cpp ex34.cpp ex31.cpp ex30.cpp ex29.cpp ex28.cpp ex27.cpp ex26.cpp \
+	   ex25.cpp ex24.cpp ex23.cpp ex21.cpp ex22.cpp
 
 #SRCS = ex1.cpp ex2.cpp ex3.cpp ex4.cpp ex5.cpp ex6.cpp ex7.cpp ex8.cpp\
 			 ex9.cpp ex10.cpp ex11.cpp ex12.cpp ex13.cpp ex14.cpp ex15.cpp\
@@ -12,6 +14,18 @@ SRCS = ex39.cpp ex38.cpp ex37.cpp ex36.cpp ex35.cpp ex34.cpp ex31.cpp ex30.cpp e
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
 EXES = ${SRCS:.cpp=}	
+
+ex44: ex44.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ ex44.o $(LOADOPTS) )
+
+ex43: ex43.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ ex43.o $(LOADOPTS) )
+
+ex42: ex42.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ ex42.o $(LOADOPTS) )
+
+ex41: ex41.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ ex41.o $(LOADOPTS) )
 
 ex40: ex40.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ ex40.o $(LOADOPTS) )
