--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,7 @@
 include ../make.inc
 
 SRCS = pwdft.cpp dgdft.cpp \
-			 diagonalize.cpp den2cube.cpp alb2cube.cpp lufact.cpp
+	diagonalize.cpp den2cube.cpp alb2cube.cpp lufact.cpp den2cubepw.cpp
 
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
@@ -18,6 +18,10 @@ dgdft: dgdft.o ${DGDFT_LIB}
 
 diagonalize: diagonalize.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ diagonalize.o $(LOADOPTS) )
+
+den2cubepw: den2cubepw.o ${DGDFT_LIB} 
+	($(LOADER) -o $@ den2cubepw.o $(LOADOPTS) )
+
 
 den2cube: den2cube.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ den2cube.o $(LOADOPTS) )
