--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ SRCS = scf_dg.cpp scf.cpp eigensolver.cpp  iondynamics.cpp \
 			 hamiltonian_dg_matrix.cpp hamiltonian_dg.cpp hamiltonian.cpp \
 			 periodtable.cpp spinor.cpp fourier.cpp utility.cpp esdf.cpp \
 			 mpi_interf.cpp scalapack.cpp lapack.cpp blas.cpp global.cpp \
-			 cuda_errors.cpp  cublas.cpp
+			 cuda_errors.cpp  cublas.cpp magma.cpp
 SRCF90 = rqrcp.f90 check_qpf.f90  check_qrf.f90  partial_pdgeqpf.f90 \
 			 partial_qr_swap.f90  
 SRCF   = partial_pdgeqp3.f  partial_pdgeqrf.f  \
