--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,8 +4,7 @@
 include ../make.inc
 
 SRCS = pwdft.cpp dgdft.cpp \
-	diagonalize.cpp den2cube.cpp alb2cube.cpp lufact.cpp den2cubepw.cpp \
-	scala_time.cpp
+	diagonalize.cpp den2cube.cpp alb2cube.cpp lufact.cpp den2cubepw.cpp 
 
 OBJS = ${SRCS:.cpp=.o}
 DEPS = ${SRCS:.cpp=.d}
@@ -23,7 +22,6 @@ diagonalize: diagonalize.o ${DGDFT_LIB}
 den2cubepw: den2cubepw.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ den2cubepw.o $(LOADOPTS) )
 
-
 den2cube: den2cube.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ den2cube.o $(LOADOPTS) )
 
@@ -32,9 +30,6 @@ alb2cube: alb2cube.o ${DGDFT_LIB}
 
 lufact: lufact.o ${DGDFT_LIB} 
 	($(LOADER) -o $@ lufact.o $(LOADOPTS) )
-
-scala_time: scala_time.o ${DGDFT_LIB}
-	($(LOADER) -o $@ scala_time.o $(LOADOPTS) )
 
 -include ${DEPS}
 
