ACE Complex version done.
Please note: if not ACE, then this could be wrong...

Will check this in the next commit.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ SRCS = scf_dg.cpp scf.cpp eigensolver.cpp  iondynamics.cpp \
 			 periodtable.cpp spinor.cpp fourier.cpp utility.cpp esdf.cpp \
 			 mpi_interf.cpp scalapack.cpp lapack.cpp blas.cpp global.cpp \
 			 tddft.cpp  sgmres.cpp \
-			 cuda_errors.cpp  cublas.cpp magma.cpp
+			 cuda_errors.cpp  cublas.cpp magma.cpp cuSolver.cpp
 #SRCF90 = rqrcp.f90 check_qpf.f90  check_qrf.f90  partial_pdgeqpf.f90 \
 #			 partial_qr_swap.f90  
 #SRCF   = partial_pdgeqp3.f  partial_pdgeqrf.f  \
