Summit, GPU TDDFT complex version works for RK4 and PTTRAPDIIS
And the complex ACE and direct HSE works.

Note:

    1. change the naming to use -D SUMMITDEV in the make.inc

    2. not to use magma, but cuSolver in the new code.

    3. Not fully optimized. CPU and GPU code are combined together.

    4. changed scf_dg.cpp so that it works on the GPU side. ==> might cause future conflict

    5. FFTW and CUFFT gives different results. not have time to fully understand why.

    6. The double precision HSE only works with ACE operator, might have a bug with the direct method.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,12 +3,17 @@
 
 include ../make.inc
 
-SRCS = scf_dg.cpp scf.cpp eigensolver.cpp  iondynamics.cpp \
+ifeq (${USE_MAGMA},1)
+SRC += magma.cpp 
+else
+SRC += cuSolver.cpp 
+endif
+SRCS = scf_dg.cpp scf.cpp eigensolver.cpp  iondynamics.cpp cuSolver.cpp\
 			 hamiltonian_dg_matrix.cpp hamiltonian_dg.cpp hamiltonian.cpp \
 			 periodtable.cpp spinor.cpp fourier.cpp utility.cpp esdf.cpp \
 			 mpi_interf.cpp scalapack.cpp lapack.cpp blas.cpp global.cpp \
 			 tddft.cpp  sgmres.cpp \
-			 cuda_errors.cpp  cublas.cpp magma.cpp cuSolver.cpp
+			 cuda_errors.cpp  cublas.cpp 
 #SRCF90 = rqrcp.f90 check_qpf.f90  check_qrf.f90  partial_pdgeqpf.f90 \
 #			 partial_qr_swap.f90  
 #SRCF   = partial_pdgeqp3.f  partial_pdgeqrf.f  \
