--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,7 @@
 #
 
 set( LIBDG_SRC scf_dg.cpp scf.cpp eigensolver.cpp iondynamics.cpp 
-	       hamiltonian_dg_matrix.cpp hamiltonian_dg.cpp 
+	       hamiltonian_dg_matrix.cpp hamiltonian_dg_matrix_device.cpp hamiltonian_dg.cpp 
                hamiltonian.cpp periodtable.cpp spinor.cpp 
                fourier.cpp utility.cpp esdf.cpp mpi_interf.cpp 
                scalapack.cpp lapack.cpp blas.cpp global.cpp 
