reset a few default parameters.
In examples/ folder, try to generate a set of inputs with a minimal amount of adjustable parameters

--- a/examples/pwdft/01-ground_pbe/pwdft.in
+++ b/examples/pwdft/01-ground_pbe/pwdft.in
@@ -1,40 +1,12 @@
 # Si 8 atoms
 
-Output_Position:       0
-Output_Velocity:       0
-
-Mixing_Variable:       potential
-Mixing_Type:           kerker+anderson
-Mixing_StepLength:     0.2
-Mixing_MaxDim:         10
-
-Output_Density:         0
-Output_Wfn:             0
-Restart_Density:        0
-Restart_Wfn:            0 
-Output_HMatrix:         0
-
+Temperature:        	  300
 Extra_States:           8
 
-Temperature:        	  300
-SCF_Outer_MaxIter:      500
-SCF_Outer_Tolerance:    1e-6
-SCF_Inner_MaxIter:      1
-SCF_Inner_Tolerance:    1e-6
-
-Eig_MaxIter: 	         3 
-Eig_Tolerance:          1e-8
-Eig_Tolerance_Dynamics: 0
-
-XC_Type:               XC_GGA_X_PBE
+XC_Type:               XC_GGA_XC_PBE
 Pseudo_Type:           ONCV 
-Use_VLocal:            1
-Use_Atom_Density:      1
-
-PW_Solver:                PPCG
 
 Ecut_Wavefunction:        10
-Density_Grid_Factor:	  2.0
 
 begin UPF_File
   Si_ONCV_PBE-1.1.upf
