simplify the name of XC functionals
- This is a BREAKING change
- The supported functionals are now called

  LDA, PBE, HSE, PBEH

--- a/examples/pwdft/01-ground_pbe/pwdft.in
+++ b/examples/pwdft/01-ground_pbe/pwdft.in
@@ -3,7 +3,7 @@
 Temperature:        	  300
 Extra_States:           8
 
-XC_Type:               XC_GGA_XC_PBE
+XC_Type:               PBE
 Pseudo_Type:           ONCV 
 
 Ecut_Wavefunction:        10
