--- a/examples/pwdft/01-ground_pbe/pwdft.in
+++ b/examples/pwdft/01-ground_pbe/pwdft.in
@@ -3,7 +3,7 @@
 Temperature:        	  300
 Extra_States:           8
 
-XC_Type:               PBE
+XC_Type:               HSE
 Pseudo_Type:           ONCV 
 
 Ecut_Wavefunction:        10
