--- a/src/pwdft/Makefile
+++ b/src/pwdft/Makefile
@@ -1,12 +1,12 @@
 include ../../make.inc
 
-SRCS = eigensolver.cpp  esdf.cpp  hamiltonian.cpp  iondynamics.cpp  periodtable.cpp  pwdft.cpp  scf.cpp  spinor.cpp
+SRCS = eigensolver.cpp  hamiltonian.cpp  iondynamics.cpp  pwdft.cpp  scf.cpp  spinor.cpp
 
 OBJS = ${SRCS:.cpp=.o} ${SRCF90:.f90=.o} ${SRCF:.f=.o} 
 
 ifeq (${DEVICE}, nvgpu)
 	vpath %.cpp . device 
-	SRCS = eigensolver.cpp  esdf.cpp  hamiltonian.cpp  iondynamics.cpp  periodtable.cpp  pwdft.cpp  scf.cpp  spinor.cpp device_eigensolver.cpp	device_hamiltonian.cpp	device_spinor.cpp
+	SRCS = eigensolver.cpp  hamiltonian.cpp  iondynamics.cpp  pwdft.cpp  scf.cpp  spinor.cpp device_eigensolver.cpp	device_hamiltonian.cpp	device_spinor.cpp
 endif
 
 
