--- a/src/pwdft/Makefile
+++ b/src/pwdft/Makefile
@@ -22,4 +22,5 @@ ${DGDFT_LIB}:
 	(cd ${DGDFT_DIR}/src/common; make all )
 
 cleanall:
-	rm -f ${EXES} ${OBJS}  ${DGDFT_LIB} ${DEPS} *.d.o
+	rm -f ${EXES} ${OBJS}  ${DGDFT_LIB} ${DEPS} *.d.o 
+	cd ../common;  make cleanall
