Add a program variable
- The new `program` variable in the input indicates whether pwdft
(default), dgdft, tddft is used. This also allows us to consistently
identify which input/output parameters should be considered

- Introduce AdjustNumGrid in the input to consistently adjust the number
of grid points in PW and DG.

--- a/examples/pwdft/04-geoopt_hse/pwdft.in
+++ b/examples/pwdft/04-geoopt_hse/pwdft.in
@@ -9,6 +9,8 @@ extra_states:           4
 xc_type:                HSE
 
 ecut_wavefunction:        40
+eig_maxiter:            5
+pw_solver:              LOBPCG
 
 begin upf_file
   ../../pp_ONCV/O_ONCV_PBE-1.2.upf
